<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="U_HybridStarterControlInput" Id="{b0affbf2-70da-4fb8-bb7a-1046754a50a7}">
    <Declaration><![CDATA[TYPE
    U_HybridStarterControlInput :
    UNION
        uUint  : UINT;
        aBytes : ARRAY[0..1] OF BYTE;
        stBits : ST_HybridStarterControlInputBits;
    END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>