<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="U_HybridStarterControlOutput" Id="{c864c6a9-73df-4e75-be2a-74e705afbec5}">
    <Declaration><![CDATA[TYPE
    U_HybridStarterControlOutput :
    UNION
        uUint  : UINT;
        aBytes : ARRAY[0..1] OF BYTE;
		stBits : ST_HybridStarterControlOutputBits;
    END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>